--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="3mm"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:fadeScrollbars="true">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,35 +16,39 @@
 
         <TextView
             android:id="@+id/tv_select"
+            style="@style/header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:text="Select die"
-            style="@style/header"/>
+            android:text="Select die" />
 
         <Spinner
             android:id="@+id/spinner"
-            style="@style/header"
+            style="@style/spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:fadeScrollbars="true"
-            android:scrollbars="vertical" />
+            android:scrollbars="vertical"
+            android:textSize="22sp" />
 
 
     </LinearLayout>
+
     <LinearLayout
+        android:id="@+id/i"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
+
         <Button
             android:id="@+id/button_add"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:textSize="14sp"
-            android:text="Add new die" />
+            android:text="Add new die"
+            android:textSize="14sp" />
 
         <EditText
             android:id="@+id/editTextNumber"
@@ -51,7 +56,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:inputType="number"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:textSize="24sp" />
 
     </LinearLayout>
     <LinearLayout
@@ -65,20 +71,20 @@
             android:id="@+id/button_roll1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20sp"
+            android:layout_margin="10sp"
             android:text="1 roll" />
 
         <Button
             android:id="@+id/button_roll2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20sp"
+            android:layout_margin="10sp"
             android:text="2 rolls" />
 
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="130dp"
         android:orientation="horizontal"
         android:layout_margin="10dp">
 
@@ -99,23 +105,37 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="history result:"
-        android:layout_margin="10dp"/>
+        android:text="History:"/>
 
     <TextView
         android:id="@+id/tv_history_result"
         android:layout_width="match_parent"
-        android:layout_height="200sp"
+        android:layout_height="150sp"
         android:background="@color/gray"
         android:layout_margin="10dp"
         android:fadeScrollbars="true"
         android:text="" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="10dp">
 
-    <Button
-        android:id="@+id/button_clear"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Clear history" />
-
+            <Button
+                android:id="@+id/button_clear"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:text="Clear history"
+                app:icon="@drawable/baseline_delete" />
+            <Button
+                android:id="@+id/button_reset"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="10dp"
+                android:text="Reset Dice"
+                app:icon="@drawable/baseline_reset"/>
+        </LinearLayout>
 </LinearLayout>
